# peregrine_core

./: REFERENCES.md  safety-frame.md
control_manager/: CMakeLists.txt  README.md  package.xml
control_manager/include/control_manager/: control_manager_node.hpp  controller_base.hpp  px4_passthrough_controller.hpp
control_manager/src/: SE3Controller.cpp  control_manager_node.cpp  px4_passthrough_controller.cpp
docs/: 01_aerion_interfaces_README.md  01_peregrine_interfaces_README.md  02_frame_transforms_README.md  03_hardware_abstraction_README.md  04_estimator_manager_README.md  05_controller_manager_README.md  06_trajectory_manager_README.md  07_uav_manager_README.md  08_safety_monitor_README.md  09_multi_agent_coordinator_README.md  10_tui_status_README.md  11_aerion_bringup_README.md  11_peregrine_bringup_README.md  ARCHITECTURE.md  multi-agent-setup.md
estimation_manager/: CMakeLists.txt  README.md  package.xml
estimation_manager/config/: defaults.yaml
estimation_manager/include/estimation_manager/: estimation_manager_node.hpp  estimator_base.hpp  px4_passthrough_estimator.hpp
estimation_manager/src/: estimation_manager_node.cpp  px4_passthrough_estimator.cpp
estimation_manager/test/: test_estimation_lifecycle_integration.cpp
examples/: CMakeLists.txt  README.md  package.xml
examples/hardware_abstraction_example/: CMakeLists.txt  README.md  package.xml
examples/hardware_abstraction_example/config/: circle_figure8_mission.yaml  example10_managers.yaml  example11_managers.yaml  multi_cycle_mission.yaml  safety_diag_only.yaml  safety_land_enabled.yaml  safety_regression.yaml  uav_require_external_safety.yaml
examples/hardware_abstraction_example/launch/: example10_circle_figure8_demo.launch.py  example11_multi_cycle_demo.launch.py  example12_safety_validation.launch.py  example13_monitoring_demo.launch.py  example8_px4_sitl_single_uav.launch.py  peregrine_single_container.launch.py
examples/hardware_abstraction_example/scripts/: circle_figure8_demo.py  lifecycle_bringup_orchestrator.py  multi_cycle_demo.py  safety_fault_injector.py  safety_regression_demo.py  safety_takeoff_hold_demo.py
examples/safety_validation_example/: CMakeLists.txt  README.md  package.xml
examples/safety_validation_example/launch/: safety_fresh_sitl_regression.launch.py
frame_transforms/: CMakeLists.txt  README.md  package.xml
frame_transforms/include/frame_transforms/: conversions.hpp  frame_transformer.hpp  geodetic_conv.hpp  px4_transforms.hpp
frame_transforms/include/peregrine_transforms/: px4_transforms.hpp
frame_transforms/src/: frame_transformer.cpp  px4_transforms.cpp
hardware_abstraction/: CMakeLists.txt  README.md  package.xml
hardware_abstraction/config/: defaults.yaml
hardware_abstraction/include/hardware_abstraction/: msg_version.hpp  px4_hardware_abstraction.hpp
hardware_abstraction/include/peregrine_autopilot_abstraction/: msg_version.hpp  px4_hardware_abstraction.hpp
hardware_abstraction/src/: px4_hardware_abstraction.cpp
peregrine_bringup/: CMakeLists.txt  package.xml
peregrine_bringup/config/: simulation.yaml
peregrine_bringup/launch/: multi_uav_sitl.launch.py  single_uav.launch.py  single_uav_sitl.launch.py
peregrine_controllers/: README.md  package.xml
peregrine_interfaces/: CMakeLists.txt  README.md  generate_interface_lists.bash  interface_files.cmake  package.xml
peregrine_interfaces/action/: ExecuteTrajectory.action  GoTo.action  Land.action  Takeoff.action
peregrine_interfaces/msg/: ControlOutput.msg  GpsStatus.msg  ManagerStatus.msg  PX4ActuatorCmd.msg  PX4Status.msg  PX4TrajectorySetpoint.msg  RigidBodyArray.msg  SafetyCheckerResult.msg  SafetyStatus.msg  State.msg  TrajectorySetpoint.msg  UAVState.msg
peregrine_interfaces/srv/: MoveToPose.srv
peregrine_managers/: CMakeLists.txt  README.md
peregrine_rviz_plugins/: package.xml
peregrine_status/: CMakeLists.txt  README.md  package.xml
peregrine_trajectory_generators/: CMakeLists.txt  README.md
peregrine_transforms/: CMakeLists.txt  package.xml
peregrine_transforms/include/peregrine_transforms/: frame_transformer.hpp  geodetic_conv.hpp
rviz_plugins/: CMakeLists.txt  README.md  package.xml
rviz_plugins/config/: defaults.yaml
rviz_plugins/include/rviz_plugins/: flight_visualizer_node.hpp
rviz_plugins/launch/: flight_visualization.launch.py
rviz_plugins/rviz/: flight_visualization.rviz
rviz_plugins/src/: flight_visualizer_node.cpp  main.cpp
safety_monitor/: CMakeLists.txt  package.xml
safety_monitor/config/: defaults.yaml
safety_monitor/include/safety_monitor/: battery_checker.hpp  envelope_checker.hpp  geofence_checker.hpp  gps_checker.hpp  rule_engine.hpp  safety_action_executor.hpp  safety_checker.hpp  safety_monitor_node.hpp
safety_monitor/src/: battery_checker.cpp  envelope_checker.cpp  geofence_checker.cpp  gps_checker.cpp  rule_engine.cpp  safety_action_executor.cpp  safety_monitor_node.cpp
trajectory_manager/: CMakeLists.txt  README.md  package.xml
trajectory_manager/config/: defaults.yaml
trajectory_manager/include/trajectory_manager/: generators.hpp  trajectory_generator_base.hpp  trajectory_manager_node.hpp
trajectory_manager/src/: generators.cpp  trajectory_manager_node.cpp
tui_status/: CMakeLists.txt  README.md  package.xml
tui_status/config/: defaults.yaml
tui_status/include/tui_status/: alert_buffer.hpp  renderer.hpp  tui_node.hpp
tui_status/src/: alert_buffer.cpp  main.cpp  renderer.cpp  tui_node.cpp
uav_manager/: CMakeLists.txt  README.md  package.xml
uav_manager/config/: defaults.yaml
uav_manager/include/uav_manager/: action_orchestrator.hpp  health_aggregator.hpp  supervisor_state_machine.hpp  transition_guard.hpp  uav_manager_node.hpp
uav_manager/src/: action_orchestrator.cpp  health_aggregator.cpp  supervisor_state_machine.cpp  transition_guard.cpp  uav_manager_node.cpp
uav_manager/test/: test_health_aggregator.cpp  test_supervisor_state_machine.cpp
